--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 body {
   font-family: 'Montserrat', sans-serif !important;
   -webkit-font-smoothing: antialiased;
+  letter-spacing: 0.20px;
 }
 
 h1, h2, h3, h4, h5 {
